# nyt-crossword

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: project-workflow.mdc
.github/workflows/: deploy-pages.yml
docs/: architecture.md  construction.md  puzzle-format.md
puzzles/: LICENSE.md
puzzles/ai-generated/: NOTES.md  construction.json  puzzle.json
puzzles/autocomplete/: NOTES.md  puzzle.json
puzzles/background-check/: NOTES.md  construction.json  puzzle.json
scripts/: __init__.py  ac3_fill.py  build_outputs.py  construct.py  fill_blacksquare.py  serve.py  validate.py
src/crossword_tools/: __init__.py  construct.py  export.py  fill.py  fill_blacksquare.py  grid.py  validate.py
tests/: test_construction.py  test_export.py  test_serve.py  test_site.py  test_validate.py
web/: 404.html  app.js  index.html  puz.js  puzzles.json  styles.css
web/puzzles/: AI_Generated.puz  Autocomplete.puz  Background_Check.puz
